service.yaml
kind: Service
apiVersion: v1
metadata:
  name: the-service
spec:
  selector:
    deployment: hello
  type: LoadBalancer
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8666
    targetPort: 8080
