route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: the-route
spec:
  to:
    kind: Service
    name: the-service
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
